# todo_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
backend/apps/core/: apps.py  models.py  snowflake.py
backend/apps/tasks/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/tasks/management/commands/: setup_periodic_tasks.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_task_is_notified.py  0003_task_is_pre_notified_alter_task_is_notified.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_telegram_id.py  0003_user_language_user_timezone.py
backend/config/: celery.py  settings.py  urls.py
backend/tests/: test_snowflake.py
bot/: client.py  config.py  dialogs.py  getters.py  main.py
bot/handlers/: start.py
bot/states/: state.py
bot/tests/: test_client.py  test_dialogs.py  test_getters.py  test_parser.py  test_transcriber.py
bot/utils/: parser.py  transcriber.py
