[project]
name = "todo-bot"
version = "0.1.0"
description = "ToDo tg bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "psycopg2-binary>=2.9",
    "celery>=5.3",
    "redis>=5.0",
    "django-celery-beat>=2.5",
    "python-decouple>=3.8",
    "aiogram>=3.10",
    "aiogram-dialog>=2.1",
    "aiohttp>=3.9",
    "uvicorn>=0.30",
    "gunicorn>=22.0",
    "timezonefinder>=8.1.0",
    "requests>=2.32.5",
    "dateparser>=1.2.2",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
    "google-genai>=1.56.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "types-redis",
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-asyncio>=1.3.0",
    "freezegun>=1.5.5",
    "aioresponses",
    "types-pytz>=2025.2.0.20251108",
    "types-python-dateutil>=2.9.0.20251115",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["migrations", "manage.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/backend"
strict_optional = false 
disallow_untyped_defs = false
check_untyped_defs = false
disable_error_code = ["misc", "import-untyped"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=. --cov-report=html --cov-report=term-missing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
pythonpath = [".", "backend", "bot"]
DJANGO_SETTINGS_MODULE = "backend.config.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",          
    "manage.py",              
    "*/config/asgi.py",       
    "*/config/wsgi.py",       
    "*/config/settings.py",   
    "*/tests/*",              
    "*/venv/*",              
    "__init__.py",            
    "bot/main.py",             
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_empty = true

